# pg-robot

./: .gitignore  LICENSE  README.md
mcu_driver/: CMPS12.cpp  Makefile  Motor.cpp  RotaryEncoder.cpp  cmps12.cpp  mcu_driver.ino  motor.cpp  rotary_encoder.cpp  sketch.json
mcu_driver/cmps12/: CMPS12.hpp
mcu_driver/encoder/: RotaryEncoder.hpp
mcu_driver/include/: cmps12.hpp  rotary_encoder.hpp
mcu_driver/motor/: Motor.hpp
mcu_driver/src/cmps12/: cmps12.cpp  cmps12.hpp
mcu_driver/src/motor/: motor.cpp  motor.hpp
mcu_driver/src/rotary_encoder/: rotary_encoder.cpp  rotary_encoder.hpp
pg_arduino/: CMakeLists.txt  package.xml  pg_arduino.ino  sketch.json
pg_arduino/firmware/: CMakeLists.txt
pg_arduino/firmware/src/: main.cpp
pg_arduino/src/cmps12/: cmps12.cpp  cmps12.hpp
pg_arduino/src/dribbler/: dribbler.cpp  dribbler.hpp
pg_arduino/src/motor/: motor.cpp  motor.hpp
pg_arduino/src/proximity/: proximity.cpp  proximity.hpp
pg_arduino/src/rotary_encoder/: rotary_encoder.cpp  rotary_encoder.hpp
pg_bringup/: CMakeLists.txt  package.xml
pg_bringup/config/: actuators_config.yaml  common_config.yaml  imu.yaml  motor_velocity_control.yaml  pg_config.yaml  rotary_encoder.yaml  sensors_config.yaml
pg_bringup/config/common/: common_config.yaml
pg_bringup/config/rpi_gpio/: gpio.yaml
pg_bringup/config/sensors/: imu.yaml  rotary_encoder.yaml
pg_bringup/launch/: control.launch  hardware.launch  kri_2022.launch  localization.launch  pg_start.launch  pg_test.launch  pid_tuning.launch  robot.launch
pg_control/: CMakeLists.txt  package.xml
pg_control/scripts/: base_controller.py  go_to_goal.py
pg_gameplay/: CMakeLists.txt  package.xml
pg_gameplay/launch/: go_to_point.launch
pg_gameplay/scripts/: kri_2021.py  kri_2021_wilayah_2.py
pg_hardware/: CMakeLists.txt  package.xml
pg_hardware/include/pg_hardware/: dribbler_driver.hpp  imu.hpp  imu_filter.hpp  kicker.hpp  motor_driver.hpp
pg_hardware/pg_dribbler_driver/: CMakeLists.txt  package.xml
pg_hardware/pg_dribbler_driver/include/pg_dribbler_driver/: dribbler_driver.hpp
pg_hardware/pg_dribbler_driver/src/: dribbler_driver.cpp  dribbler_driver_node.cpp
pg_hardware/pg_kicker/: CMakeLists.txt  package.xml
pg_hardware/pg_kicker/include/pg_kicker/: kicker.hpp
pg_hardware/pg_kicker/src/: kicker.cpp  kicker_node.cpp
pg_hardware/pg_motor_driver/: CMakeLists.txt  package.xml
pg_hardware/pg_motor_driver/src/: motor_driver.cpp  motor_driver_node.cpp
pg_hardware/pg_motor_mcu/src/rotary_encoder/: rotary_encoder.hpp
pg_hardware/pg_proximity_sensor/: CMakeLists.txt  package.xml
pg_hardware/pg_proximity_sensor/include/pg_proximity_sensor/: proximity_sensor.hpp
pg_hardware/pg_proximity_sensor/src/: proximity_sensor.cpp  proximity_sensor_node.cpp
pg_hardware/scripts/: motor_driver.py
pg_hardware/src/: dribbler_driver.cpp  dribbler_driver_node.cpp  imu.cpp  imu_filter.cpp  imu_filter_node.cpp  imu_node.cpp  kicker.cpp  kicker_node.cpp  motor_driver.cpp  motor_driver_node.cpp
pg_localization/: CMakeLists.txt  package.xml
pg_localization/include/pg_localization/: odometry.hpp
pg_localization/src/: odometry.cpp  odometry_node.cpp  odometry_pub.cpp
pg_msgs/: CMakeLists.txt  package.xml
pg_msgs/action/: GoToGoal.action
pg_msgs/msg/: MotorCommand.msg  WheelVelocityCommand.msg
pg_msgs/srv/: KickBall.srv  PrepareKicker.srv
