<?xml version="1.0"?>
<package format="2">
  <name>pg_arduino</name>
  <version>0.0.0</version>
  <description>The pg_arduino package</description>

  <maintainer email="wmhrdk@todo.todo">wmhrdk</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pg_msgs</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>pg_msgs</build_export_depend>
  <build_export_depend>rosserial_arduino</build_export_depend>
  <build_export_depend>rosserial_client</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>pg_msgs</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
